# infotreno-cli

./: .gitignore  Cargo.toml  README.md
src/: cli_input.rs  main.rs  news.rs  parse_trains.rs  plot.rs  station.rs  stations.rs  track_train.rs
