[package]
name = "infotreno-cli"
version = "0.4.10"
edition = "2021"
description = "A simple CLI to get train and railway information from Trenitalia"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23"
serde_json = "1.0"
tabular = "0.2"
tokio = { version = "1", features = ["full"] }
